--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-     "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon -r dotenv/config ./src/server.js",
     "debug": "nodemon --inspect -r dotenv/config ./src/server.js",
     "start": "node ./src/server.js"
@@ -30,6 +30,7 @@
     "express-list-endpoints": "^5.0.0",
     "express-validator": "^6.8.0",
     "fs-extra": "^9.0.1",
+    "multer": "^1.4.2",
     "uniqid": "^5.2.0"
   }
 }
