--- a/package.json
+++ b/package.json
@@ -25,12 +25,16 @@
     "nodemon": "^2.0.6"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-list-endpoints": "^5.0.0",
     "express-validator": "^6.8.0",
     "fs-extra": "^9.0.1",
     "multer": "^1.4.2",
-    "uniqid": "^5.2.0"
+    "public-ip": "^4.0.3",
+    "uniqid": "^5.2.0",
+    "xml2js": "^0.4.23",
+    "xmlbuilder": "^15.1.1"
   }
 }
