--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "express-list-endpoints": "^5.0.0",
     "express-validator": "^6.8.0",
     "fs-extra": "^9.0.1",
+    "json2csv": "^5.0.5",
     "multer": "^1.4.2",
     "public-ip": "^4.0.3",
+    "stream": "0.0.2",
     "uniqid": "^5.2.0",
     "xml2js": "^0.4.23",
     "xmlbuilder": "^15.1.1"
