--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "multer": "^1.4.2",
     "public-ip": "^4.0.3",
     "stream": "0.0.2",
+    "swagger-ui-express": "^4.1.5",
     "uniqid": "^5.2.0",
     "xml2js": "^0.4.23",
-    "xmlbuilder": "^15.1.1"
+    "xmlbuilder": "^15.1.1",
+    "yamljs": "^0.3.0"
   }
 }
